// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`логи васов: если куплен пакет, залогирует показ, когда блок будет в области видимости 1`] = `
Array [
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": undefined,
      "price": 197,
      "serviceId": "all_sale_fresh",
    },
  ],
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": 1499,
      "price": 967,
      "serviceId": "show-in-stories",
    },
  ],
]
`;

exports[`покажет только кнопку если оффер не активен 1`] = `
<Button
  className="VasFormUserServiceSet__button"
  color="green"
  disabled={false}
  fontWeight="bold"
  onClick={[Function]}
  size="promo"
  type="button"
  width="full"
>
  <Price
    currency="RUR"
    free="Сохранить"
    prefix="Сохранить и ускорить за"
    price={0}
    separator=" "
  />
</Button>
`;

exports[`правильно формирует список сервисов для оплаты при сохранении без услуг 1`] = `
Array [
  Object {
    "selectedItems": Array [],
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при сохранении неактивного оффера 1`] = `
Array [
  Object {
    "selectedItems": Array [],
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при сохранении с услугами если куплен пакет 1`] = `
Array [
  Object {
    "selectedItems": Array [
      Object {
        "count": 1,
        "name": "all_sale_fresh",
      },
    ],
  },
]
`;
